[package]
name = "async-signals"
version = "0.4.1"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Library for easier and safe Unix signal handling with async Stream."
repository = "https://github.com/Sherlock-Holo/async-signal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false }
once_cell = "1"
nix = "0.26"
crossbeam-queue = "0.3"
crossbeam-skiplist = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
libc = "0.2"
