[package]
name = "async-signals"
version = "0.5.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Library for easier and safe Unix signal handling with async Stream."
repository = "https://github.com/Sherlock-Holo/async-signal"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.3.11"
crossbeam-skiplist = "0.1.3"
futures-util = { version = "0.3.30", default-features = false }
nix = { version = "0.29.0", features = ["signal"] }
once_cell = "1.19.0"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt"] }
libc = "0.2.155"
